--- a/index.html
+++ b/index.html
@@ -3,7 +3,23 @@
   <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="./style.css" />
-    <title>Gantungan Kiyomi Gummy</title>
+    <title>Gantungan Kiyomi Gummy by @falmesino</title>
+
+    <meta name="description" content="Buat livestream kamu menjadi lebih manis dengan memajang gantungan Kiyomi Gummy yang sangat lucu ini!">
+
+    <meta property="og:url" content="https://evren-community.com">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Gantungan Kiyomi Gummy by @falmesino">
+    <meta property="og:description" content="Buat livestream kamu menjadi lebih manis dengan memajang gantungan Kiyomi Gummy yang sangat lucu ini!">
+    <meta property="og:image" content="https://gantungan-kiyomi-gummy.vercel.app/opengraph.jpg?v=1746206951575">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="evren-community.com">
+    <meta property="twitter:url" content="https://evren-community.com">
+    <meta name="twitter:title" content="Gantungan Kiyomi Gummy by @falmesino">
+    <meta name="twitter:description" content="Buat livestream kamu menjadi lebih manis dengan memajang gantungan Kiyomi Gummy yang sangat lucu ini!">
+    <meta name="twitter:image" content="https://gantungan-kiyomi-gummy.vercel.app/opengraph.jpg?v=1746206951575">
+
   </head>
   <body>
     <div class="wrapper">
